# crypto_ticket

./: .env.example  .gitignore  README.md  go.mod  go.sum  pyproject.toml  requirements.txt
cmd/backfill_adjustments/: main.go
cmd/backfill_klines/: main.go
cmd/maintain_klines/: main.go
cmd/marketd/: main.go
cmd/verify_official_bars/: main.go
docs/: adjustment-verification-report-2026-07-23.md  flink-kline-infra-design.md  go-realtime-market-architecture.md
internal/adjustment/: backfill.go  backfill_test.go  deriver.go  deriver_integration_test.go  deriver_test.go  factor.go  factor_test.go
internal/aggregator/: engine.go  engine_test.go
internal/api/: compression.go  compression_test.go  server.go  server_test.go
internal/app/: market_service.go  market_service_test.go  stream_consumer.go
internal/cache/: cache.go  memory.go  redis.go
internal/collector/: collector.go  collector_test.go  official_live.go  official_live_test.go
internal/config/: config.go
internal/corpaction/: alias.go  alias_test.go  registry.go  registry_test.go
internal/exchange/: adapter.go  adapter_test.go  announcement.go  announcement_test.go  binance.go  binance_announcement.go  binance_contract_info.go  binance_contract_info_test.go  instrument_meta.go  okx.go  okx_announcement.go  okx_announcement_test.go  okx_instruments_test.go  (+3 more)
sql/: schema.sql
tests/: test_aggregation.py  test_dashboard_history.py  test_mysql_storage.py  test_schema.py  test_timeframes.py
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
(+57 files in other folders)
