[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-ticket"
version = "0.1.0"
description = "Real-time crypto tick collector, bar aggregator, and weekly archive service."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "redis>=5.0",
  "websockets>=12.0",
  "tenacity>=8.2",
  "pymysql>=1.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
crypto-ticket = "crypto_ticket.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

